--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                 <version>8.1.2</version>
                 <configuration>
 
-                    <mainClass>org.jewelsea.websocket.test.MainApp</mainClass>
+                    <mainClass>org.jewelsea.websocket.test.JavaFXWebsocketDemoApp</mainClass>
 
                     <!-- only required if signing the jar file -->
                     <keyStoreAlias>selfsigned</keyStoreAlias>
@@ -43,6 +43,16 @@
                     <certState>CA</certState>
                     <certCountry>US</certCountry>
 
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
